--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
           </ul>
         </nav>
         <div class="acc-btns-container">
-          <button id="login-btn" type="button" class="login-btn sign-btn">Login</button>
+          <button id="login-btn" type="button" class="login-btn sign-btn">
+            Login
+          </button>
           <button id="sign-btn" type="button" class="sign-btn">Sign Up</button>
         </div>
       </div>
@@ -75,27 +77,33 @@
       </button>
       <div class="popup-container">
         <h3 class="popup-title">Register</h3>
-        <form action="./php/register.php" method="POST" id="form" name="form" class="popup-form">
+        <form
+          action="./php/register.php"
+          method="POST"
+          id="form"
+          name="form"
+          class="popup-form"
+        >
           <label for="name" class="popup-input-label">Name</label>
           <svg id="svg1" class="svg" width="18" height="18">
             <use xlink:href="../images/icons.svg#inp-icon1"></use>
           </svg>
           <input class="popup-input" type="text" name="name" id="name" />
           <label for="tel" class="popup-input-label">Number</label>
+          <input class="popup-input" type="tel" name="tel" id="tel" />
           <svg id="svg2" class="svg" style="top: 203px" width="18" height="18">
             <use xlink:href="../images/icons.svg#inp-icon2"></use>
           </svg>
-          <input class="popup-input" type="tel" name="tel" id="tel" />
           <label for="email" class="popup-input-label">Email</label>
-          <svg id="svg3" class="svg" style="top: 279px" width="18" height="18">
-            <use xlink:href="../images/icons.svg#inp-icon3"></use>
-          </svg>
           <input
             class="popup-input email"
             type="email"
             name="email"
             id="email"
           />
+          <svg id="svg3" class="svg" style="top: 281px" width="18" height="18">
+            <use xlink:href="../images/icons.svg#inp-icon3"></use>
+          </svg>
           <label for="password" class="popup-input-label">Password</label>
           <svg
             id="svg4"
@@ -115,7 +123,7 @@
           <svg
             id="svg5"
             style="top: 357px; left: 529px; cursor: pointer"
-            class="svg"
+            class="svg visibility-btn"
             width="20"
             height="20"
           >
@@ -141,7 +149,9 @@
               <a href="Policy.txt">Умови договору</a></label
             >
           </div>
-          <button type="submit" class="popup-form-btn" name="register">Відправити</button>
+          <button type="submit" class="popup-form-btn" name="register">
+            Send
+          </button>
         </form>
       </div>
     </div>
@@ -155,7 +165,13 @@
       </button>
       <div class="popup-container">
         <h3 class="popup-title">Login</h3>
-        <form action="./php/login.php" method="POST" id="lform" name="form" class="popup-form">
+        <form
+          action="./php/login.php"
+          method="POST"
+          id="lform"
+          name="form"
+          class="popup-form"
+        >
           <label for="name" class="popup-input-label">Name</label>
           <svg id="svg11" class="svg" width="18" height="18">
             <use xlink:href="../images/icons.svg#inp-icon1"></use>
@@ -193,7 +209,9 @@
               xlink:href="../images/icons.svg#visibility-off-icon"
             ></use>
           </svg>
-          <label for="password" class="popup-input-label">Repeat Password</label>
+          <label for="password" class="popup-input-label"
+            >Repeat Password</label
+          >
           <svg
             id="svg41"
             style="top: 200px; left: 49px"
@@ -225,7 +243,14 @@
               xlink:href="../images/icons.svg#visibility-off-icon"
             ></use>
           </svg>
-          <button style="margin-top: 30px;" type="submit" name="login" class="lpopup-form-btn">Відправити</button>
+          <button
+            style="margin-top: 30px"
+            type="submit"
+            name="login"
+            class="lpopup-form-btn"
+          >
+            Send
+          </button>
         </form>
       </div>
     </div>
