--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
         >
           <label for="name" class="popup-input-label">Name</label>
           <svg id="svg1" class="svg" width="18" height="18">
-            <use xlink:href="../images/icons.svg#inp-icon1"></use>
+            <use xlink:href="./images/icons.svg#inp-icon1"></use>
           </svg>
           <input class="popup-input" type="text" name="name" id="name" />
           <label for="tel" class="popup-input-label">Number</label>
           <input class="popup-input" type="tel" name="tel" id="tel" />
           <svg id="svg2" class="svg" style="top: 203px" width="18" height="18">
-            <use xlink:href="../images/icons.svg#inp-icon2"></use>
+            <use xlink:href="./images/icons.svg#inp-icon2"></use>
           </svg>
           <label for="email" class="popup-input-label">Email</label>
           <input
@@ -102,7 +102,7 @@
             id="email"
           />
           <svg id="svg3" class="svg" style="top: 281px" width="18" height="18">
-            <use xlink:href="../images/icons.svg#inp-icon3"></use>
+            <use xlink:href="./images/icons.svg#inp-icon3"></use>
           </svg>
           <label for="password" class="popup-input-label">Password</label>
           <svg
@@ -112,7 +112,7 @@
             width="24"
             height="24"
           >
-            <use xlink:href="../images/icons.svg#inp-icon4"></use>
+            <use xlink:href="./images/icons.svg#inp-icon4"></use>
           </svg>
           <input
             class="popup-input"
@@ -129,11 +129,11 @@
           >
             <use
               class="visibility-on"
-              xlink:href="../images/icons.svg#visibility-on-icon"
+              xlink:href="./images/icons.svg#visibility-on-icon"
             ></use>
             <use
               class="visibility-off"
-              xlink:href="../images/icons.svg#visibility-off-icon"
+              xlink:href="./images/icons.svg#visibility-off-icon"
             ></use>
           </svg>
           <div class="checkbox-container">
@@ -174,7 +174,7 @@
         >
           <label for="name" class="popup-input-label">Name</label>
           <svg id="svg11" class="svg" width="18" height="18">
-            <use xlink:href="../images/icons.svg#inp-icon1"></use>
+            <use xlink:href="./images/icons.svg#inp-icon1"></use>
           </svg>
           <input class="popup-input" type="text" name="lname" id="lname" />
           <label for="password" class="popup-input-label">Password</label>
@@ -185,7 +185,7 @@
             width="24"
             height="24"
           >
-            <use xlink:href="../images/icons.svg#inp-icon4"></use>
+            <use xlink:href="./images/icons.svg#inp-icon4"></use>
           </svg>
           <input
             class="popup-input"
@@ -202,11 +202,11 @@
           >
             <use
               class="lvisibility-on"
-              xlink:href="../images/icons.svg#visibility-on-icon"
+              xlink:href="./images/icons.svg#visibility-on-icon"
             ></use>
             <use
               class="lvisibility-off"
-              xlink:href="../images/icons.svg#visibility-off-icon"
+              xlink:href="./images/icons.svg#visibility-off-icon"
             ></use>
           </svg>
           <label for="password" class="popup-input-label"
@@ -219,7 +219,7 @@
             width="24"
             height="24"
           >
-            <use xlink:href="../images/icons.svg#inp-icon4"></use>
+            <use xlink:href="./images/icons.svg#inp-icon4"></use>
           </svg>
           <input
             class="popup-input"
@@ -236,11 +236,11 @@
           >
             <use
               class="rvisibility-on"
-              xlink:href="../images/icons.svg#visibility-on-icon"
+              xlink:href="./images/icons.svg#visibility-on-icon"
             ></use>
             <use
               class="rvisibility-off"
-              xlink:href="../images/icons.svg#visibility-off-icon"
+              xlink:href="./images/icons.svg#visibility-off-icon"
             ></use>
           </svg>
           <button
@@ -280,21 +280,21 @@
               <li class="social-links-item">
                 <a class="social-links link">
                   <svg width="34" height="34">
-                    <use xlink:href="../images/icons.svg#facebook"></use>
+                    <use xlink:href="./images/icons.svg#facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-links-item">
                 <a class="social-links link">
                   <svg width="36" height="36">
-                    <use xlink:href="../images/icons.svg#inst"></use>
+                    <use xlink:href="./images/icons.svg#inst"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-links-item">
                 <a class="social-links link">
                   <svg width="36" height="36">
-                    <use xlink:href="../images/icons.svg#twit"></use>
+                    <use xlink:href="./images/icons.svg#twit"></use>
                   </svg>
                 </a>
               </li>
@@ -333,7 +333,7 @@
                     <svg id="like1" width="28" height="28">
                       <use
                         class="like-icon"
-                        xlink:href="../images/icons.svg#like"
+                        xlink:href="./images/icons.svg#like"
                       ></use>
                     </svg>
                   </button>
@@ -341,7 +341,7 @@
                     <svg width="30" height="30">
                       <use
                         class="save-icon"
-                        xlink:href="../images/icons.svg#save"
+                        xlink:href="./images/icons.svg#save"
                       ></use>
                     </svg>
                   </button>
@@ -376,7 +376,7 @@
                     <svg width="28" height="28">
                       <use
                         class="like-icon"
-                        xlink:href="../images/icons.svg#like"
+                        xlink:href="./images/icons.svg#like"
                       ></use>
                     </svg>
                   </button>
@@ -384,7 +384,7 @@
                     <svg width="30" height="30">
                       <use
                         class="save-icon"
-                        xlink:href="../images/icons.svg#save"
+                        xlink:href="./images/icons.svg#save"
                       ></use>
                     </svg>
                   </button>
@@ -419,7 +419,7 @@
                     <svg width="28" height="28">
                       <use
                         class="like-icon"
-                        xlink:href="../images/icons.svg#like"
+                        xlink:href="./images/icons.svg#like"
                       ></use>
                     </svg>
                   </button>
@@ -427,7 +427,7 @@
                     <svg width="30" height="30">
                       <use
                         class="save-icon"
-                        xlink:href="../images/icons.svg#save"
+                        xlink:href="./images/icons.svg#save"
                       ></use>
                     </svg>
                   </button>
@@ -462,7 +462,7 @@
                     <svg width="28" height="28">
                       <use
                         class="like-icon"
-                        xlink:href="../images/icons.svg#like"
+                        xlink:href="./images/icons.svg#like"
                       ></use>
                     </svg>
                   </button>
@@ -470,7 +470,7 @@
                     <svg width="30" height="30">
                       <use
                         class="save-icon"
-                        xlink:href="../images/icons.svg#save"
+                        xlink:href="./images/icons.svg#save"
                       ></use>
                     </svg>
                   </button>
@@ -505,7 +505,7 @@
                     <svg width="28" height="28">
                       <use
                         class="like-icon"
-                        xlink:href="../images/icons.svg#like"
+                        xlink:href="./images/icons.svg#like"
                       ></use>
                     </svg>
                   </button>
@@ -513,7 +513,7 @@
                     <svg width="30" height="30">
                       <use
                         class="save-icon"
-                        xlink:href="../images/icons.svg#save"
+                        xlink:href="./images/icons.svg#save"
                       ></use>
                     </svg>
                   </button>
@@ -548,7 +548,7 @@
                     <svg width="28" height="28">
                       <use
                         class="like-icon"
-                        xlink:href="../images/icons.svg#like"
+                        xlink:href="./images/icons.svg#like"
                       ></use>
                     </svg>
                   </button>
@@ -556,7 +556,7 @@
                     <svg width="30" height="30">
                       <use
                         class="save-icon"
-                        xlink:href="../images/icons.svg#save"
+                        xlink:href="./images/icons.svg#save"
                       ></use>
                     </svg>
                   </button>
@@ -664,7 +664,7 @@
                     <svg width="28" height="28">
                       <use
                         class="like-icon2"
-                        xlink:href="../images/icons.svg#like"
+                        xlink:href="./images/icons.svg#like"
                       ></use>
                     </svg>
                   </button>
@@ -672,7 +672,7 @@
                     <svg width="30" height="30">
                       <use
                         class="save-icon2"
-                        xlink:href="../images/icons.svg#save"
+                        xlink:href="./images/icons.svg#save"
                       ></use>
                     </svg>
                   </button>
@@ -707,7 +707,7 @@
                     <svg width="28" height="28">
                       <use
                         class="like-icon2"
-                        xlink:href="../images/icons.svg#like"
+                        xlink:href="./images/icons.svg#like"
                       ></use>
                     </svg>
                   </button>
@@ -715,7 +715,7 @@
                     <svg width="30" height="30">
                       <use
                         class="save-icon2"
-                        xlink:href="../images/icons.svg#save"
+                        xlink:href="./images/icons.svg#save"
                       ></use>
                     </svg>
                   </button>
@@ -750,7 +750,7 @@
                     <svg width="28" height="28">
                       <use
                         class="like-icon2"
-                        xlink:href="../images/icons.svg#like"
+                        xlink:href="./images/icons.svg#like"
                       ></use>
                     </svg>
                   </button>
@@ -758,7 +758,7 @@
                     <svg width="30" height="30">
                       <use
                         class="save-icon2"
-                        xlink:href="../images/icons.svg#save"
+                        xlink:href="./images/icons.svg#save"
                       ></use>
                     </svg>
                   </button>
@@ -793,7 +793,7 @@
                     <svg width="28" height="28">
                       <use
                         class="like-icon2"
-                        xlink:href="../images/icons.svg#like"
+                        xlink:href="./images/icons.svg#like"
                       ></use>
                     </svg>
                   </button>
@@ -801,7 +801,7 @@
                     <svg width="30" height="30">
                       <use
                         class="save-icon2"
-                        xlink:href="../images/icons.svg#save"
+                        xlink:href="./images/icons.svg#save"
                       ></use>
                     </svg>
                   </button>
